# app/admin/service/dto/sys_dept.go
@@ -9,15 +9,16 @@ import (
 // SysDeptGetPageReq 列表或者搜索使用结构体
 type SysDeptGetPageReq struct {
 	dto.OffsetLimitPagination `search:"-"` // 使用 offset/limit 分页
-	DeptId                    *int         `form:"deptId" search:"type:exact;column:dept_id;table:sys_dept" comment:"id"`       //id
-	ParentId                  *int         `form:"parentId" search:"type:exact;column:parent_id;table:sys_dept" comment:"上级部门"` //上级部门
-	DeptPath                  *string      `form:"deptPath" search:"type:exact;column:dept_path;table:sys_dept" comment:""`     //路径
-	DeptName                  *string      `form:"deptName" search:"type:exact;column:dept_name;table:sys_dept" comment:"部门名称"` //部门名称
-	Sort                      *int         `form:"sort" search:"type:exact;column:sort;table:sys_dept" comment:"排序"`            //排序
-	Leader                    *string      `form:"leader" search:"type:exact;column:leader;table:sys_dept" comment:"负责人"`       //负责人
-	Phone                     *string      `form:"phone" search:"type:exact;column:phone;table:sys_dept" comment:"手机"`          //手机
-	Email                     *string      `form:"email" search:"type:exact;column:email;table:sys_dept" comment:"邮箱"`          //邮箱
-	Status                    *int         `form:"status" search:"type:exact;column:status;table:sys_dept" comment:"状态"`        //状态
+	DeptId                    *int         `form:"deptId" search:"type:exact;column:dept_id;table:sys_dept" comment:"id"`             //id
+	ParentId                  *int         `form:"parentId" search:"type:exact;column:parent_id;table:sys_dept" comment:"上级部门"`       //上级部门
+	DeptPath                  *string      `form:"deptPath" search:"type:exact;column:dept_path;table:sys_dept" comment:""`           //路径
+	DeptName                  *string      `form:"deptName" search:"type:exact;column:dept_name;table:sys_dept" comment:"部门名称"`       //部门名称
+	DeptCatalog               *string      `form:"deptCatalog" search:"type:exact;column:dept_catalog;table:sys_dept" comment:"部门类型"` //部门类型 finance 财务  hr 人力资源 customer_service 客服
+	Sort                      *int         `form:"sort" search:"type:exact;column:sort;table:sys_dept" comment:"排序"`                  //排序
+	Leader                    *string      `form:"leader" search:"type:exact;column:leader;table:sys_dept" comment:"负责人"`             //负责人
+	Phone                     *string      `form:"phone" search:"type:exact;column:phone;table:sys_dept" comment:"手机"`                //手机
+	Email                     *string      `form:"email" search:"type:exact;column:email;table:sys_dept" comment:"邮箱"`                //邮箱
+	Status                    *int         `form:"status" search:"type:exact;column:status;table:sys_dept" comment:"状态"`              //状态
 }
 
 func (m *SysDeptGetPageReq) GetNeedSearch() interface{} {
@@ -25,15 +26,16 @@ func (m *SysDeptGetPageReq) GetNeedSearch() interface{} {
 }
 
 type SysDeptInsertReq struct {
-	DeptId   int    `json:"deptId" comment:"编码"`                                    // 编码
-	ParentId int    `json:"parentId" comment:"上级部门" vd:"?"`                         //上级部门
-	DeptPath string `json:"deptPath" comment:""`                                    //路径
-	DeptName string `json:"deptName" comment:"部门名称" vd:"len($)>0"`                  //部门名称
-	Sort     int    `json:"sort" comment:"排序" vd:"?"`                               //排序
-	Leader   string `json:"leader" comment:"负责人" vd:"@:len($)>0; msg:'leader不能为空'"` //负责人
-	Phone    string `json:"phone" comment:"手机" vd:"?"`                              //手机
-	Email    string `json:"email" comment:"邮箱" vd:"?"`                              //邮箱
-	Status   int    `json:"status" comment:"状态" vd:"$>0"`                           //状态
+	DeptId      int    `json:"deptId" comment:"编码"`                                    // 编码
+	ParentId    int    `json:"parentId" comment:"上级部门" vd:"?"`                         //上级部门
+	DeptPath    string `json:"deptPath" comment:""`                                    //路径
+	DeptName    string `json:"deptName" comment:"部门名称" vd:"len($)>0"`                  //部门名称
+	DeptCatalog string `json:"deptCatalog" comment:"部门类型" vd:"?"`                      //部门类型 finance 财务  hr 人力资源 customer_service 客服
+	Sort        int    `json:"sort" comment:"排序" vd:"?"`                               //排序
+	Leader      string `json:"leader" comment:"负责人" vd:"@:len($)>0; msg:'leader不能为空'"` //负责人
+	Phone       string `json:"phone" comment:"手机" vd:"?"`                              //手机
+	Email       string `json:"email" comment:"邮箱" vd:"?"`                              //邮箱
+	Status      int    `json:"status" comment:"状态" vd:"$>0"`                           //状态
 	common.ControlBy
 }
 
@@ -44,6 +46,7 @@ func (s *SysDeptInsertReq) Generate(model *models.SysDept) {
 	model.DeptName = s.DeptName
 	model.ParentId = s.ParentId
 	model.DeptPath = s.DeptPath
+	model.DeptCatalog = s.DeptCatalog
 	model.Sort = s.Sort
 	model.Leader = s.Leader
 	model.Phone = s.Phone
@@ -57,15 +60,16 @@ func (s *SysDeptInsertReq) GetId() interface{} {
 }
 
 type SysDeptUpdateReq struct {
-	DeptId   int    `json:"deptId" comment:"编码"`                                    // 编码
-	ParentId int    `json:"parentId" comment:"上级部门" vd:"?"`                         //上级部门
-	DeptPath string `json:"deptPath" comment:""`                                    //路径
-	DeptName string `json:"deptName" comment:"部门名称" vd:"len($)>0"`                  //部门名称
-	Sort     int    `json:"sort" comment:"排序" vd:"?"`                               //排序
-	Leader   string `json:"leader" comment:"负责人" vd:"@:len($)>0; msg:'leader不能为空'"` //负责人
-	Phone    string `json:"phone" comment:"手机" vd:"?"`                              //手机
-	Email    string `json:"email" comment:"邮箱" vd:"?"`                              //邮箱
-	Status   int    `json:"status" comment:"状态" vd:"$>0"`                           //状态
+	DeptId      int    `json:"deptId" comment:"编码"`                                    // 编码
+	ParentId    int    `json:"parentId" comment:"上级部门" vd:"?"`                         //上级部门
+	DeptPath    string `json:"deptPath" comment:""`                                    //路径
+	DeptName    string `json:"deptName" comment:"部门名称" vd:"len($)>0"`                  //部门名称
+	DeptCatalog string `json:"deptCatalog" comment:"部门类型" vd:"?"`                      //部门类型 finance 财务  hr 人力资源 customer_service 客服
+	Sort        int    `json:"sort" comment:"排序" vd:"?"`                               //排序
+	Leader      string `json:"leader" comment:"负责人" vd:"@:len($)>0; msg:'leader不能为空'"` //负责人
+	Phone       string `json:"phone" comment:"手机" vd:"?"`                              //手机
+	Email       string `json:"email" comment:"邮箱" vd:"?"`                              //邮箱
+	Status      int    `json:"status" comment:"状态" vd:"$>0"`                           //状态
 	common.ControlBy
 }
 
@@ -77,6 +81,7 @@ func (s *SysDeptUpdateReq) Generate(model *models.SysDept) {
 	model.DeptName = s.DeptName
 	model.ParentId = s.ParentId
 	model.DeptPath = s.DeptPath
+	model.DeptCatalog = s.DeptCatalog
 	model.Sort = s.Sort
 	model.Leader = s.Leader
 	model.Phone = s.Phone
